--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ body.dark #task-input {
   background-color: #e2d7d7;
   color: #1b1a1a;
   border: 2px solid #555;
+
+}
+body.dark #task-input:hover {
+  border-color: #d315c3;
+  outline: none;
 }
 
 #add-btn {
@@ -105,6 +110,10 @@ body.dark #task-input {
 
 #task-list li:hover {
   background-color: #e7e7e7;
+}
+body.dark #task-list li:hover {
+  background-color: #1a1818;
+  color:#cfcfcd;
 }
 
 body.dark #task-list li {
